--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -199,3 +199,12 @@ h1, h2, h3, h4, h5, h6, p {
     height: auto;
 }
 
+
+/* Color Selectors */
+
+.md-color-selector{
+    width: 100px;
+    height: 10px;
+    border: 0;
+}
+
