--- a/client/src/app/styler/styler.component.html
+++ b/client/src/app/styler/styler.component.html
@@ -277,58 +277,67 @@
 <!-- TEXT STYLE CARD -->
 <div class="style-cards-container" *ngIf="this.data.viewTextElements">
   <div class="style-card greenAccent01" *ngFor="let textStyle of this.data.textStyles.reverse()">
+
     <div class="flex-row-between style-card-row">
-      <h3>{{textStyle.name}}
-        <fa name="edit"></fa>
+      <h3 *ngIf="!textStyle.editNameMode">{{textStyle.name}}
+        <fa name="edit" (click)="textStyle.toggleEditNameMode()"></fa>
       </h3>
-      <a (click)="this.data.test()">
+
+      <div *ngIf="textStyle.editNameMode">
+        <input type="text" [(ngModel)]="textStyle.name" placeholder="textStyle.name">
+        <fa name="save" (click)="textStyle.toggleEditNameMode()"></fa>
+      </div>
+
+      <a (click)="this.data.deleteTextStyleById(textStyle.id)">
         <fa name="trash"></fa>
       </a>
     </div>
 
     <div class="flex-row-between style-card-row">
-      <h4>Font:</h4>
-      <h5>Google font picker</h5>
+      <h4>Font family:</h4>
+      <div [(fontPicker)]="textStyle.fontPickerData" [fpWidth]="'320px'" [fpPosition]="'bottom'" [fpSizeSelect]="true" [fpStyleSelect]="true">
+        <p>{{textStyle.fontPickerData['family']}} {{textStyle.fontPickerData['style']}} {{textStyle.fontPickerData['size']}}
+        </p>
+      </div>
     </div>
 
     <div class="flex-row-between style-card-row">
-      <h4>Color:</h4>
-      <h5>Color picker</h5>
+      <h4>Font color:</h4>
+      <input class="md-color-selector" [(colorPicker)]="textStyle.color" [style.background]="textStyle.color" />
     </div>
 
 
     <div class="flex-row-between style-card-row">
-      <h4>Background:</h4>
-      <h5>Color picker</h5>
+      <h4>Background color:</h4>
+      <input class="md-color-selector" [(colorPicker)]="textStyle.backgroundColor" [style.background]="textStyle.backgroundColor"
+      />
     </div>
-
-
 
     <div class="flex-row-between style-card-row">
       <div class="flex-row-evenly">
-        <a (click)="this.data.test()" class="style-card-btn">
+        <a (click)="textStyle.setStyleProperty('hAlign', 'left')" class="style-card-btn">
           <i class="material-icons">format_align_left</i>
         </a>
 
-        <a (click)="this.data.test()" class="style-card-btn">
+        <a (click)="textStyle.setStyleProperty('hAlign', 'center')" class="style-card-btn">
           <i class="material-icons">format_align_center</i>
         </a>
 
-        <a (click)="this.data.test()" class="style-card-btn">
+        <a (click)="textStyle.setStyleProperty('hAlign', 'right')" class="style-card-btn">
           <i class="material-icons">format_align_right</i>
         </a>
       </div>
 
       <div class="flex-row-evenly">
-        <a (click)="this.data.test()" class="style-card-btn">
+        <a (click)="textStyle.setStyleProperty('vAlign', 'top')" class="style-card-btn">
           <i class="material-icons">vertical_align_top</i>
         </a>
 
-        <a (click)="this.data.test()" class="style-card-btn">
+        <a (click)="textStyle.setStyleProperty('vAlign', 'center')" class="style-card-btn">
           <i class="material-icons">vertical_align_center</i>
         </a>
 
-        <a (click)="this.data.test()" class="style-card-btn">
+        <a (click)="textStyle.setStyleProperty('vAlign', 'bottom')" class="style-card-btn">
           <i class="material-icons">vertical_align_bottom</i>
         </a>
       </div>
@@ -336,29 +345,29 @@
 
     <div class="flex-row-between style-card-row">
       <div class="flex-row-evenly">
-        <a (click)="this.data.test()" class="style-card-btn">
+        <a (click)="textStyle.toggleStyleProperty('underline')" class="style-card-btn">
           <fa name="underline"></fa>
         </a>
 
-        <a (click)="this.data.test()" class="style-card-btn">
+        <a (click)="textStyle.toggleStyleProperty('lineThrough')" class="style-card-btn">
           <fa name="strikethrough"></fa>
         </a>
 
-        <a (click)="this.data.test()" class="style-card-btn">
+        <a (click)="textStyle.toggleStyleProperty('overline')" class="style-card-btn">
           <h3 style="text-decoration:overline">O</h3>
         </a>
       </div>
 
       <div class="flex-row-evenly">
-        <a (click)="this.data.test()" class="style-card-btn">
+        <a (click)="textStyle.toggleStyleProperty('breakWord')" class="style-card-btn">
           <i class="material-icons">wrap_text</i>
         </a>
 
-        <a (click)="this.data.test()" class="style-card-btn">
+        <a (click)="textStyle.toggleStyleProperty('uppercase'); textStyle.setStyleProperty('lowercase', false)" class="style-card-btn">
           <i class="material-icons">format_size</i>
         </a>
 
-        <a (click)="this.data.test()" class="style-card-btn">
+        <a (click)="textStyle.toggleStyleProperty('lowercase'); textStyle.setStyleProperty('uppercase', false)" class="style-card-btn">
           <i class="material-icons">text_fields</i>
         </a>
       </div>
@@ -384,13 +393,13 @@
         <div class="flex-row-evenly">
           <h5>Margin:</h5>
           <h5>
-            <input type="number" value="0">px</h5>
+            <input type="number" [(ngModel)]="textStyle.margin">px</h5>
         </div>
 
         <div class="flex-row-evenly">
           <h5>Padding:</h5>
           <h5>
-            <input type="number" value="0">px</h5>
+            <input type="number" [(ngModel)]="textStyle.padding">px</h5>
         </div>
       </div>
 
@@ -398,14 +407,14 @@
         <div class="flex-row-evenly">
           <h5>Word spacing:</h5>
           <h5>
-            <input type="number" value="0">
+            <input type="number" [(ngModel)]="textStyle.wordSpacing">px
           </h5>
         </div>
 
         <div class="flex-row-evenly">
           <h5>Line height:</h5>
           <h5>
-            <input type="number" value="0">
+            <input type="number" [(ngModel)]="textStyle.lineHeight">x
           </h5>
         </div>
       </div>
@@ -414,7 +423,7 @@
         <div class="flex-row-evenly">
           <h5>Letter spacing:</h5>
           <h5>
-            <input type="number" value="0">
+            <input type="number" [(ngModel)]="textStyle.letterSpacing">px
           </h5>
         </div>
 
@@ -424,193 +433,6 @@
             <input type="number" value="0">
           </h5>
         </div>
-      </div>
-
-
-      <div class="flex-row-between style-card-row">
-        <a (click)="this.data.test()" class="style-card-btn">
-          <i class="material-icons">border_outer</i>
-        </a>
-
-        <a (click)="this.data.test()" class="style-card-btn">
-          <i class="material-icons">border_left</i>
-        </a>
-
-        <a (click)="this.data.test()" class="style-card-btn">
-          <i class="material-icons">border_top</i>
-        </a>
-
-        <a (click)="this.data.test()" class="style-card-btn">
-          <i class="material-icons">border_right</i>
-        </a>
-
-        <a (click)="this.data.test()" class="style-card-btn">
-          <i class="material-icons">border_bottom</i>
-        </a>
-      </div>
-
-      <!-- Full border settings -->
-      <div class="flex-row-between style-card-row">
-        <h4>Border: </h4>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Width: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Color: </h5>
-        <h5>Color picker</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Style: </h5>
-        <select>
-          <option>Solid</option>
-          <option>Dashed</option>
-          <option>Dotted</option>
-        </select>
-      </div>
-
-      <!-- Top border settings -->
-      <div class="flex-row-between style-card-row">
-        <h4>Top Border: </h4>
-      </div>
-
-
-      <div class="flex-row-between style-card-row">
-        <h5>Width: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Color: </h5>
-        <h5>Color picker</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Style: </h5>
-        <select>
-          <option>Solid</option>
-          <option>Dashed</option>
-          <option>Dotted</option>
-        </select>
-      </div>
-
-      <!-- Right border settings -->
-      <div class="flex-row-between style-card-row">
-        <h4>Right Border: </h4>
-      </div>
-
-
-      <div class="flex-row-between style-card-row">
-        <h5>Width: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Color: </h5>
-        <h5>Color picker</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Style: </h5>
-        <select>
-          <option>Solid</option>
-          <option>Dashed</option>
-          <option>Dotted</option>
-        </select>
-      </div>
-
-      <!-- Bottom border settings -->
-      <div class="flex-row-between style-card-row">
-        <h4>Bottom Border: </h4>
-      </div>
-
-
-      <div class="flex-row-between style-card-row">
-        <h5>Width: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Color: </h5>
-        <h5>Color picker</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Style: </h5>
-        <select>
-          <option>Solid</option>
-          <option>Dashed</option>
-          <option>Dotted</option>
-        </select>
-      </div>
-
-      <!-- Left border settings -->
-      <div class="flex-row-between style-card-row">
-        <h4>Left Border: </h4>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Width: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Color: </h5>
-        <h5>Color picker</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Style: </h5>
-        <select>
-          <option>Solid</option>
-          <option>Dashed</option>
-          <option>Dotted</option>
-        </select>
-      </div>
-
-      <!-- Full border settings -->
-      <div class="flex-row-between style-card-row">
-        <h4>Border Radius: </h4>
-      </div>
-
-      <!--Border radius settings -->
-      <div class="flex-row-between style-card-row">
-        <h5>Full border radius: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Top left border radius: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Top right border radius: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Bottom left border radius: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Bottom right border radius: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
       </div>
 
       <!-- Text shadow settings -->
@@ -641,5 +463,210 @@
         <h5>
           <input type="number" value="0"> px</h5>
       </div>
+
+      <!-- BORDER OPTIONS -->
+
+      <div class="flex-row-between style-card-row">
+        <a (click)="textStyle.border.toggleBorderProperty('showFullBorder');
+        textStyle.border.setBorderProperty('showTopBorder', false);
+        textStyle.border.setBorderProperty('showRightBorder', false);
+        textStyle.border.setBorderProperty('showBottomBorder', false);
+        textStyle.border.setBorderProperty('showLeftBorder', false);" class="style-card-btn">
+          <i class="material-icons">border_outer</i>
+        </a>
+
+        <a (click)="textStyle.border.toggleBorderProperty('showLeftBorder');
+        textStyle.border.setBorderProperty('showFullBorder', false);" class="style-card-btn">
+          <i class="material-icons">border_left</i>
+        </a>
+
+        <a (click)="textStyle.border.toggleBorderProperty('showTopBorder');
+        textStyle.border.setBorderProperty('showFullBorder', false);" class="style-card-btn">
+          <i class="material-icons">border_top</i>
+        </a>
+
+        <a (click)="textStyle.border.toggleBorderProperty('showRightBorder');
+        textStyle.border.setBorderProperty('showFullBorder', false);" class="style-card-btn">
+          <i class="material-icons">border_right</i>
+        </a>
+
+        <a (click)="textStyle.border.toggleBorderProperty('showBottomBorder');
+        textStyle.border.setBorderProperty('showFullBorder', false);" class="style-card-btn">
+          <i class="material-icons">border_bottom</i>
+        </a>
+      </div>
+
+      <!-- Full border settings -->
+      <div *ngIf="textStyle.border.showFullBorder">
+        <div class="flex-row-between style-card-row">
+          <h4>Border: </h4>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Width: </h5>
+          <h5>
+            <input type="number" value="1"> px</h5>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Color: </h5>
+          <h5>Color picker</h5>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Style: </h5>
+          <select>
+            <option>Solid</option>
+            <option>Dashed</option>
+            <option>Dotted</option>
+          </select>
+        </div>
+
+
+        <!--Border radius settings -->
+        <div class="flex-row-between style-card-row">
+          <h4>Border Radius: </h4>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Full border radius: </h5>
+          <h5>
+            <input type="number" value="1"> px</h5>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Top left border radius: </h5>
+          <h5>
+            <input type="number" value="1"> px</h5>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Top right border radius: </h5>
+          <h5>
+            <input type="number" value="1"> px</h5>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Bottom left border radius: </h5>
+          <h5>
+            <input type="number" value="1"> px</h5>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Bottom right border radius: </h5>
+          <h5>
+            <input type="number" value="1"> px</h5>
+        </div>
+      </div>
     </div>
+
+    <!-- Top border settings -->
+    <div *ngIf="textStyle.border.showTopBorder">
+      <div class="flex-row-between style-card-row">
+        <h4>Top Border: </h4>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Width: </h5>
+        <h5>
+          <input type="number" value="1"> px</h5>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Color: </h5>
+        <h5>Color picker</h5>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Style: </h5>
+        <select>
+          <option>Solid</option>
+          <option>Dashed</option>
+          <option>Dotted</option>
+        </select>
+      </div>
+    </div>
+    <!-- Right border settings -->
+    <div *ngIf="textStyle.border.showRightBorder">
+      <div class="flex-row-between style-card-row">
+        <h4>Right Border: </h4>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Width: </h5>
+        <h5>
+          <input type="number" value="1"> px</h5>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Color: </h5>
+        <h5>Color picker</h5>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Style: </h5>
+        <select>
+          <option>Solid</option>
+          <option>Dashed</option>
+          <option>Dotted</option>
+        </select>
+      </div>
+    </div>
+
+    <!-- Bottom border settings -->
+    <div *ngIf="textStyle.border.showBottomBorder">
+      <div class="flex-row-between style-card-row">
+        <h4>Bottom Border: </h4>
+      </div>
+
+
+      <div class="flex-row-between style-card-row">
+        <h5>Width: </h5>
+        <h5>
+          <input type="number" value="1"> px</h5>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Color: </h5>
+        <h5>Color picker</h5>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Style: </h5>
+        <select>
+          <option>Solid</option>
+          <option>Dashed</option>
+          <option>Dotted</option>
+        </select>
+      </div>
+    </div>
+
+    <!-- Left border settings -->
+    <div *ngIf="textStyle.border.showLeftBorder">
+      <div class="flex-row-between style-card-row">
+        <h4>Left Border: </h4>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Width: </h5>
+        <h5>
+          <input type="number" value="1"> px</h5>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Color: </h5>
+        <h5>Color picker</h5>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Style: </h5>
+        <select>
+          <option>Solid</option>
+          <option>Dashed</option>
+          <option>Dotted</option>
+        </select>
+      </div>
+    </div>
+
   </div>
+</div>
