Setup textstyles.  Setup textObjects.  Setup jsPDF, HTML2CANVAS.  Setup slide editor control panel.

--- a/client/src/app/sandbox/sandbox.component.html
+++ b/client/src/app/sandbox/sandbox.component.html
@@ -28,7 +28,7 @@
     <textarea [(ngModel)]="this.data.sandboxText">
       
     </textarea>
-    <a (click)="this.data.addObjectToSlide('text')" class="lg-btn flex-col-evenly grayAccent02">
+    <a (click)="this.data.addTextObjectToSlide()" class="lg-btn flex-col-evenly grayAccent02">
       <fa name="share" size="3x"></fa>
       <p>Add text object to slide</p>
     </a>
