--- a/client/src/app/sandbox/sandbox.component.css
+++ b/client/src/app/sandbox/sandbox.component.css
@@ -15,7 +15,11 @@ textarea {
 }
 
 #text-preview-container {
+    height: auto;
+    width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 85%;
+    margin: 0 auto;
 }
