--- a/client/src/app/styler/styler.component.html
+++ b/client/src/app/styler/styler.component.html
@@ -389,50 +389,45 @@
 
     <!-- EXTRA TEXT STYLE OPTIONS -->
     <div *ngIf="textStyle.showExtraOptions">
-      <div class="flex-row-between style-card-row">
-        <div class="flex-row-evenly">
-          <h5>Margin:</h5>
-          <h5>
-            <input type="number" [(ngModel)]="textStyle.margin">px</h5>
-        </div>
 
-        <div class="flex-row-evenly">
-          <h5>Padding:</h5>
-          <h5>
-            <input type="number" [(ngModel)]="textStyle.padding">px</h5>
-        </div>
+      <div class="flex-row-between style-card-row">
+        <h5>Margin:</h5>
+        <h5>
+          <input type="number" [(ngModel)]="textStyle.margin">px</h5>
       </div>
 
       <div class="flex-row-between style-card-row">
-        <div class="flex-row-evenly">
-          <h5>Word spacing:</h5>
-          <h5>
-            <input type="number" [(ngModel)]="textStyle.wordSpacing">px
-          </h5>
-        </div>
-
-        <div class="flex-row-evenly">
-          <h5>Line height:</h5>
-          <h5>
-            <input type="number" [(ngModel)]="textStyle.lineHeight">x
-          </h5>
-        </div>
+        <h5>Padding:</h5>
+        <h5>
+          <input type="number" [(ngModel)]="textStyle.padding">px</h5>
       </div>
 
       <div class="flex-row-between style-card-row">
-        <div class="flex-row-evenly">
-          <h5>Letter spacing:</h5>
-          <h5>
-            <input type="number" [(ngModel)]="textStyle.letterSpacing">px
-          </h5>
-        </div>
+        <h5>Word spacing:</h5>
+        <h5>
+          <input type="number" [(ngModel)]="textStyle.wordSpacing">px
+        </h5>
+      </div>
 
-        <div class="flex-row-evenly">
-          <h5>Opacity:</h5>
-          <h5>
-            <input type="number" value="0">
-          </h5>
-        </div>
+      <div class="flex-row-between style-card-row">
+        <h5>Line height:</h5>
+        <h5>
+          <input type="number" [(ngModel)]="textStyle.lineHeight">x
+        </h5>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Letter spacing:</h5>
+        <h5>
+          <input type="number" [(ngModel)]="textStyle.letterSpacing">px
+        </h5>
+      </div>
+
+      <div class="flex-row-between style-card-row">
+        <h5>Opacity:</h5>
+        <h5>
+          <input type="number" [(ngModel)]="textStyle.opacity">
+        </h5>
       </div>
 
       <!-- Text shadow settings -->
@@ -505,20 +500,19 @@
         <div class="flex-row-between style-card-row">
           <h5>Width: </h5>
           <h5>
-            <input type="number" value="1"> px</h5>
+            <input type="number" [(ngModel)]="textStyle.border.fullBorderWidth"> px</h5>
         </div>
 
         <div class="flex-row-between style-card-row">
           <h5>Color: </h5>
-          <h5>Color picker</h5>
+          <input class="md-color-selector" [(colorPicker)]="textStyle.border.fullBorderColor" [style.background]="textStyle.border.fullBorderColor"
+          />
         </div>
 
         <div class="flex-row-between style-card-row">
           <h5>Style: </h5>
-          <select>
-            <option>Solid</option>
-            <option>Dashed</option>
-            <option>Dotted</option>
+          <select [(ngModel)]="textStyle.border.fullBorderStyle">
+            <option *ngFor="let borderStyle of textStyle.border.borderStyles" [value]="borderStyle">{{borderStyle}}</option>
           </select>
         </div>
 
@@ -529,142 +523,133 @@
         </div>
 
         <div class="flex-row-between style-card-row">
-          <h5>Full border radius: </h5>
-          <h5>
-            <input type="number" value="1"> px</h5>
-        </div>
-
-        <div class="flex-row-between style-card-row">
           <h5>Top left border radius: </h5>
           <h5>
-            <input type="number" value="1"> px</h5>
+            <input type="number" [(ngModel)]="textStyle.border.topLeftRadius">px</h5>
         </div>
 
         <div class="flex-row-between style-card-row">
           <h5>Top right border radius: </h5>
           <h5>
-            <input type="number" value="1"> px</h5>
-        </div>
-
-        <div class="flex-row-between style-card-row">
-          <h5>Bottom left border radius: </h5>
-          <h5>
-            <input type="number" value="1"> px</h5>
+            <input type="number" [(ngModel)]="textStyle.border.topRightRadius">px</h5>
         </div>
 
         <div class="flex-row-between style-card-row">
           <h5>Bottom right border radius: </h5>
           <h5>
-            <input type="number" value="1"> px</h5>
+            <input type="number" [(ngModel)]="textStyle.border.bottomRightRadius">px</h5>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Bottom left border radius: </h5>
+          <h5>
+            <input type="number" [(ngModel)]="textStyle.border.bottomLeftRadius">px</h5>
         </div>
       </div>
-    </div>
 
-    <!-- Top border settings -->
-    <div *ngIf="textStyle.border.showTopBorder">
-      <div class="flex-row-between style-card-row">
-        <h4>Top Border: </h4>
+      <!-- Top border settings -->
+      <div *ngIf="textStyle.border.showTopBorder">
+        <div class="flex-row-between style-card-row">
+          <h4>Top Border: </h4>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Width: </h5>
+          <h5>
+            <input type="number" [(ngModel)]="textStyle.border.topBorderWidth"> px</h5>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Color: </h5>
+          <input class="md-color-selector" [(colorPicker)]="textStyle.border.topBorderColor" [style.background]="textStyle.border.topBorderColor"
+          />
+
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Style: </h5>
+          <select [(ngModel)]="textStyle.border.topBorderStyle">
+            <option *ngFor="let borderStyle of textStyle.border.borderStyles" [value]="borderStyle">{{borderStyle}}</option>
+          </select>
+        </div>
+      </div>
+      <!-- Right border settings -->
+      <div *ngIf="textStyle.border.showRightBorder">
+        <div class="flex-row-between style-card-row">
+          <h4>Right Border: </h4>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Width: </h5>
+          <h5>
+            <input type="number" [(ngModel)]="textStyle.border.rightBorderWidth"> px</h5>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Color: </h5>
+          <input class="md-color-selector" [(colorPicker)]="textStyle.border.rightBorderColor" [style.background]="textStyle.border.rightBorderColor"
+          />
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Style: </h5>
+          <select [(ngModel)]="textStyle.border.rightBorderStyle">
+            <option *ngFor="let borderStyle of textStyle.border.borderStyles" [value]="borderStyle">{{borderStyle}}</option>
+          </select>
+        </div>
       </div>
 
-      <div class="flex-row-between style-card-row">
-        <h5>Width: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Color: </h5>
-        <h5>Color picker</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Style: </h5>
-        <select>
-          <option>Solid</option>
-          <option>Dashed</option>
-          <option>Dotted</option>
-        </select>
-      </div>
-    </div>
-    <!-- Right border settings -->
-    <div *ngIf="textStyle.border.showRightBorder">
-      <div class="flex-row-between style-card-row">
-        <h4>Right Border: </h4>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Width: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Color: </h5>
-        <h5>Color picker</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Style: </h5>
-        <select>
-          <option>Solid</option>
-          <option>Dashed</option>
-          <option>Dotted</option>
-        </select>
-      </div>
-    </div>
-
-    <!-- Bottom border settings -->
-    <div *ngIf="textStyle.border.showBottomBorder">
-      <div class="flex-row-between style-card-row">
-        <h4>Bottom Border: </h4>
-      </div>
+      <!-- Bottom border settings -->
+      <div *ngIf="textStyle.border.showBottomBorder">
+        <div class="flex-row-between style-card-row">
+          <h4>Bottom Border: </h4>
+        </div>
 
 
-      <div class="flex-row-between style-card-row">
-        <h5>Width: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
+        <div class="flex-row-between style-card-row">
+          <h5>Width: </h5>
+          <h5>
+            <input type="number" [(ngModel)]="textStyle.border.bottomBorderWidth"> px</h5>
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Color: </h5>
+          <input class="md-color-selector" [(colorPicker)]="textStyle.border.bottomBorderColor" [style.background]="textStyle.border.bottomBorderColor"
+          />
+        </div>
+
+        <div class="flex-row-between style-card-row">
+          <h5>Style: </h5>
+          <select [(ngModel)]="textStyle.border.bottomBorderStyle">
+            <option *ngFor="let borderStyle of textStyle.border.borderStyles" [value]="borderStyle">{{borderStyle}}</option>
+          </select>
+        </div>
       </div>
 
-      <div class="flex-row-between style-card-row">
-        <h5>Color: </h5>
-        <h5>Color picker</h5>
-      </div>
+      <!-- Left border settings -->
+      <div *ngIf="textStyle.border.showLeftBorder">
+        <div class="flex-row-between style-card-row">
+          <h4>Left Border: </h4>
+        </div>
 
-      <div class="flex-row-between style-card-row">
-        <h5>Style: </h5>
-        <select>
-          <option>Solid</option>
-          <option>Dashed</option>
-          <option>Dotted</option>
-        </select>
-      </div>
-    </div>
+        <div class="flex-row-between style-card-row">
+          <h5>Width: </h5>
+          <h5>
+            <input type="number" [(ngModel)]="textStyle.border.leftBorderWidth"> px</h5>
+        </div>
 
-    <!-- Left border settings -->
-    <div *ngIf="textStyle.border.showLeftBorder">
-      <div class="flex-row-between style-card-row">
-        <h4>Left Border: </h4>
-      </div>
+        <div class="flex-row-between style-card-row">
+          <h5>Color: </h5>
+          <input class="md-color-selector" [(colorPicker)]="textStyle.border.leftBorderColor" [style.background]="textStyle.border.leftBorderColor"
+          />
+        </div>
 
-      <div class="flex-row-between style-card-row">
-        <h5>Width: </h5>
-        <h5>
-          <input type="number" value="1"> px</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Color: </h5>
-        <h5>Color picker</h5>
-      </div>
-
-      <div class="flex-row-between style-card-row">
-        <h5>Style: </h5>
-        <select>
-          <option>Solid</option>
-          <option>Dashed</option>
-          <option>Dotted</option>
-        </select>
+        <div class="flex-row-between style-card-row">
+          <h5>Style: </h5>
+          <select [(ngModel)]="textStyle.border.leftBorderStyle">
+            <option *ngFor="let borderStyle of textStyle.border.borderStyles" [value]="borderStyle">{{borderStyle}}</option>
+          </select>
+        </div>
       </div>
     </div>
 
