--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -37,12 +37,12 @@
 
 
 <div class="flex-row-evenly">
-  <a (click)="this.data.test()" class="flex-col-evenly lg-btn">
+  <a (click)="this.data.saveAsPng()" class="flex-col-evenly lg-btn">
     <fa name="file-image" size="4x"></fa>
     <p>Save As PNG</p>
   </a>
 
-  <a (click)="this.data.test()" class="flex-col-evenly lg-btn">
+  <a (click)="this.data.exportAsPDF()" class="flex-col-evenly lg-btn">
     <fa name="file-pdf" size="4x"></fa>
     <p>Export to PDF</p>
   </a>
