--- a/client/src/app/slide-editor/slide-editor.component.css
+++ b/client/src/app/slide-editor/slide-editor.component.css
@@ -9,11 +9,15 @@
 #slide-render-container {
     height: 100%;
     width: 100%;
+    overflow: scroll;
 }
+
+
 
 #slide-control-panel {
     height: 100%;
     width: 100%;
+    overflow: auto;
 }
 
 .slide-render {
