--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,6 +2,7 @@ body, html{
     margin: 0;
     padding: 0;
     font-family: 'Helvetica', sans-serif;
+    overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6, p {
