--- a/client/src/app/sandbox/sandbox.component.html
+++ b/client/src/app/sandbox/sandbox.component.html
@@ -34,8 +34,8 @@
     </a>
   </div>
 
-  <textarea>
-    Workspace
+  <textarea [(ngModel)]="this.data.textNotes">
+    {{this.data.textNotes}}
   </textarea>
 </div>
 
