--- a/client/src/app/styler/styler.component.html
+++ b/client/src/app/styler/styler.component.html
@@ -303,14 +303,15 @@
 
     <div class="flex-row-between style-card-row">
       <h4>Font color:</h4>
-      <input class="md-color-selector" [(colorPicker)]="textStyle.color" [style.background]="textStyle.color" cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()"/>
+      <input class="md-color-selector" [(colorPicker)]="textStyle.color" [style.background]="textStyle.color" cpOutputFormat="rgba"
+        cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
     </div>
 
 
     <div class="flex-row-between style-card-row">
       <h4>Background color:</h4>
-      <input class="md-color-selector" [(colorPicker)]="textStyle.backgroundColor" [style.background]="textStyle.backgroundColor" cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()"
-      />
+      <input class="md-color-selector" [(colorPicker)]="textStyle.backgroundColor" [style.background]="textStyle.backgroundColor"
+        cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
     </div>
 
     <div class="flex-row-between style-card-row">
@@ -424,33 +425,36 @@
       </div>
 
       <!-- Text shadow settings -->
-      <!-- <div class="flex-row-between style-card-row">
+      <div class="flex-row-between style-card-row">
         <h4>Text shadow: </h4>
+        <input type="checkbox" [(ngModel)]="textStyle.textShadow.showShadow">
       </div>
 
-      <div class="flex-row-between style-card-row">
-        <h5>Color: </h5>
-        <h5>
-          Color picker</h5>
-      </div>
+      <div *ngIf="textStyle.textShadow.showShadow">
+        <div class="flex-row-between style-card-row">
+          <h5>Color: </h5>
+          <input class="md-color-selector" [(colorPicker)]="textStyle.textShadow.color" [style.background]="textStyle.textShadow.color"
+            cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
+        </div>
 
-      <div class="flex-row-between style-card-row">
-        <h5>Horizontal shadow: </h5>
-        <h5>
-          <input type="number" value="0"> px</h5>
-      </div>
+        <div class="flex-row-between style-card-row">
+          <h5>Horizontal shadow: </h5>
+          <h5>
+            <input type="number" [(ngModel)]="textStyle.textShadow.xValue"> px</h5>
+        </div>
 
-      <div class="flex-row-between style-card-row">
-        <h5>Vertical shadow: </h5>
-        <h5>
-          <input type="number" value="0"> px</h5>
-      </div>
+        <div class="flex-row-between style-card-row">
+          <h5>Vertical shadow: </h5>
+          <h5>
+            <input type="number" [(ngModel)]="textStyle.textShadow.yValue"> px</h5>
+        </div>
 
-      <div class="flex-row-between style-card-row">
-        <h5>Blur: </h5>
-        <h5>
-          <input type="number" value="0"> px</h5>
-      </div> -->
+        <div class="flex-row-between style-card-row">
+          <h5>Blur: </h5>
+          <h5>
+            <input type="number" [(ngModel)]="textStyle.textShadow.blurValue"> px</h5>
+        </div>
+      </div>
 
       <!-- BORDER OPTIONS -->
 
@@ -498,8 +502,8 @@
 
         <div class="flex-row-between style-card-row">
           <h5>Color: </h5>
-          <input class="md-color-selector" [(colorPicker)]="textStyle.border.fullBorderColor" [style.background]="textStyle.border.fullBorderColor" cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()"
-          />
+          <input class="md-color-selector" [(colorPicker)]="textStyle.border.fullBorderColor" [style.background]="textStyle.border.fullBorderColor"
+            cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
         </div>
 
         <div class="flex-row-between style-card-row">
@@ -554,8 +558,8 @@
 
         <div class="flex-row-between style-card-row">
           <h5>Color: </h5>
-          <input class="md-color-selector" [(colorPicker)]="textStyle.border.topBorderColor" [style.background]="textStyle.border.topBorderColor" cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()"
-          />
+          <input class="md-color-selector" [(colorPicker)]="textStyle.border.topBorderColor" [style.background]="textStyle.border.topBorderColor"
+            cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
 
         </div>
 
@@ -580,8 +584,8 @@
 
         <div class="flex-row-between style-card-row">
           <h5>Color: </h5>
-          <input class="md-color-selector" [(colorPicker)]="textStyle.border.rightBorderColor" [style.background]="textStyle.border.rightBorderColor" cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()"
-          />
+          <input class="md-color-selector" [(colorPicker)]="textStyle.border.rightBorderColor" [style.background]="textStyle.border.rightBorderColor"
+            cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
         </div>
 
         <div class="flex-row-between style-card-row">
@@ -607,8 +611,8 @@
 
         <div class="flex-row-between style-card-row">
           <h5>Color: </h5>
-          <input class="md-color-selector" [(colorPicker)]="textStyle.border.bottomBorderColor" [style.background]="textStyle.border.bottomBorderColor" cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()"
-          />
+          <input class="md-color-selector" [(colorPicker)]="textStyle.border.bottomBorderColor" [style.background]="textStyle.border.bottomBorderColor"
+            cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
         </div>
 
         <div class="flex-row-between style-card-row">
@@ -633,8 +637,8 @@
 
         <div class="flex-row-between style-card-row">
           <h5>Color: </h5>
-          <input class="md-color-selector" [(colorPicker)]="textStyle.border.leftBorderColor" [style.background]="textStyle.border.leftBorderColor" cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()"
-          />
+          <input class="md-color-selector" [(colorPicker)]="textStyle.border.leftBorderColor" [style.background]="textStyle.border.leftBorderColor"
+            cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
         </div>
 
         <div class="flex-row-between style-card-row">
