--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -47,7 +47,7 @@
     <p>Export to PDF</p>
   </a>
 
-  <a (click)="this.data.test()" class="flex-col-evenly lg-btn">
+  <a (click)="this.data.saveSession()" class="flex-col-evenly lg-btn">
     <fa name="save" size="4x"></fa>
     <p>Save Session</p>
   </a>
