--- a/client/src/app/slide-editor/slide-editor.component.html
+++ b/client/src/app/slide-editor/slide-editor.component.html
@@ -30,10 +30,12 @@
 <div id="slide-editor-container" class="accent04">
   <div *ngIf="this.data.slides.length > 0" id="slide-render-container" class="flex-col-evenly accent01">
 
+    
     <div class="slide-render" [ngStyle]="this.getSlideRenderCss()">
       <!-- Render slide objects here -->
-      <div *ngFor="let slideObject of this.data.slides[this.data.currentSlideIndex].slideObjects" class="slide-object" [ngStyle]="slideObject.getCss()"
-        
+      <div *ngFor="let slideObject of this.data.slides[this.data.currentSlideIndex].slideObjects" 
+      class="slide-object" 
+      [ngStyle]="slideObject.getCss()"
       (mousedown)="this.selectObject(slideObject.id)"
       
       ngResizable
@@ -43,7 +45,8 @@
         ngDraggable 
         (endOffset)="slideObject.setTranslation($event)"
         [position]="slideObject.getTranslation()">
-        <p *ngIf="slideObject.constructor.name==='TextObject'" [ngStyle]="this.data.getTextStyleById(slideObject.styleId).getCss()">{{slideObject.textValue}}</p>
+        <p *ngIf="slideObject.constructor.name==='TextObject'" [ngStyle]="this.data.getTextStyleById(slideObject.styleId).getCss()"
+        >{{slideObject.textValue}}</p>
       </div>
 
     </div>
@@ -77,12 +80,12 @@
           <fa name="search-minus" size="1x"></fa>
         </a>
 
-        <input type='range' [(ngModel)]="this.data.slideRenderMagnification" min="0" max="100">
+        <input type='range' [(ngModel)]="this.data.slideRenderMagnification" min="0" max="200">
 
         <a (click)="this.test()">
           <fa name="search-plus" size="1x"></fa>
         </a>
-        <p>{{this.data.slideRenderMagnification + '%'}}</p>
+        <p><input type="number" [(ngModel)]="this.data.slideRenderMagnification">%</p>
       </div>
     </div>
 
