--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -10,6 +10,11 @@ h1, h2, h3, h4, h5, h6, p {
     padding: 0;
 }
 
+/*  Angular draggable/resizable handle */
+.ng-resizable-diagonal {
+    display: none;
+}
+
 /* Alignment Classes */
 .wrap {
     flex-wrap: wrap;
