--- a/client/src/app/slide-editor/slide-editor.component.html
+++ b/client/src/app/slide-editor/slide-editor.component.html
@@ -54,7 +54,7 @@
 
   </div>
 
-  <div id="slide-control-panel" class="grayAccent02">
+  <div  *ngIf="this.data.slides.length > 0" id="slide-control-panel" class="grayAccent02">
 
 
     <div id="slide-settings" class="grayAccent02 flex-row-evenly">
@@ -76,15 +76,12 @@
       </a>
 
       <div class="flex-row-evenly">
-        <a (click)="this.data.test()">
-          <fa name="search-minus" size="1x"></fa>
-        </a>
+          <fa (click)="this.data.test()" name="search-minus" size="1x"></fa>
 
         <input type='range' [(ngModel)]="this.data.slideRenderMagnification" min="0" max="200">
 
-        <a (click)="this.test()">
           <fa name="search-plus" size="1x"></fa>
-        </a>
+
         <p><input type="number" [(ngModel)]="this.data.slideRenderMagnification">%</p>
       </div>
     </div>
