--- a/client/src/app/styler/styler.component.html
+++ b/client/src/app/styler/styler.component.html
@@ -1,5 +1,5 @@
 <!-- SHAPE STYLE CARD -->
-<div class="style-cards-container" *ngIf="this.data.viewShapeElements">
+<div class="style-cards-container" *ngIf="this.data.viewShapeElements && this.data.shapeStyles.length > 0">
   <div class="style-card greenAccent01" *ngFor="let shapeStyle of this.data.shapeStyles.reverse()">
     <div class="flex-row-between style-card-row">
       <h3>{{shapeStyle.name}}
@@ -13,7 +13,7 @@
 </div>
 
 <!-- IMAGE STYLE CARD -->
-<div class="style-cards-container" *ngIf="this.data.viewImageElements">
+<div class="style-cards-container" *ngIf="this.data.viewImageElements && this.data.imageStyles.length > 0">
   <div class="style-card greenAccent01" *ngFor="let imageStyle of this.data.imageStyles.reverse()">
     <div class="flex-row-between style-card-row">
       <h3>{{imageStyle.name}}
@@ -275,7 +275,7 @@
 </div>
 
 <!-- TEXT STYLE CARD -->
-<div class="style-cards-container" *ngIf="this.data.viewTextElements">
+<div class="style-cards-container" *ngIf="this.data.viewTextElements && this.data.textStyles.length > 0">
   <div class="style-card greenAccent01" *ngFor="let textStyle of this.data.textStyles.reverse()">
 
     <div class="flex-row-between style-card-row">
@@ -304,14 +304,14 @@
     <div class="flex-row-between style-card-row">
       <h4>Font color:</h4>
       <input class="md-color-selector" [(colorPicker)]="textStyle.color" [style.background]="textStyle.color" cpOutputFormat="rgba"
-        cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
+        cpAlphaChannel="enabled"/>
     </div>
 
 
     <div class="flex-row-between style-card-row">
       <h4>Background color:</h4>
       <input class="md-color-selector" [(colorPicker)]="textStyle.backgroundColor" [style.background]="textStyle.backgroundColor"
-        cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
+        cpOutputFormat="rgba" cpAlphaChannel="enabled" />
     </div>
 
     <div class="flex-row-between style-card-row">
@@ -434,7 +434,7 @@
         <div class="flex-row-between style-card-row">
           <h5>Color: </h5>
           <input class="md-color-selector" [(colorPicker)]="textStyle.textShadow.color" [style.background]="textStyle.textShadow.color"
-            cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
+            cpOutputFormat="rgba" cpAlphaChannel="enabled"/>
         </div>
 
         <div class="flex-row-between style-card-row">
@@ -503,7 +503,7 @@
         <div class="flex-row-between style-card-row">
           <h5>Color: </h5>
           <input class="md-color-selector" [(colorPicker)]="textStyle.border.fullBorderColor" [style.background]="textStyle.border.fullBorderColor"
-            cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
+            cpOutputFormat="rgba" cpAlphaChannel="enabled" />
         </div>
 
         <div class="flex-row-between style-card-row">
@@ -559,7 +559,7 @@
         <div class="flex-row-between style-card-row">
           <h5>Color: </h5>
           <input class="md-color-selector" [(colorPicker)]="textStyle.border.topBorderColor" [style.background]="textStyle.border.topBorderColor"
-            cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
+            cpOutputFormat="rgba" cpAlphaChannel="enabled"/>
 
         </div>
 
@@ -585,7 +585,7 @@
         <div class="flex-row-between style-card-row">
           <h5>Color: </h5>
           <input class="md-color-selector" [(colorPicker)]="textStyle.border.rightBorderColor" [style.background]="textStyle.border.rightBorderColor"
-            cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
+            cpOutputFormat="rgba" cpAlphaChannel="enabled" />
         </div>
 
         <div class="flex-row-between style-card-row">
@@ -612,7 +612,7 @@
         <div class="flex-row-between style-card-row">
           <h5>Color: </h5>
           <input class="md-color-selector" [(colorPicker)]="textStyle.border.bottomBorderColor" [style.background]="textStyle.border.bottomBorderColor"
-            cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
+            cpOutputFormat="rgba" cpAlphaChannel="enabled" />
         </div>
 
         <div class="flex-row-between style-card-row">
@@ -638,7 +638,7 @@
         <div class="flex-row-between style-card-row">
           <h5>Color: </h5>
           <input class="md-color-selector" [(colorPicker)]="textStyle.border.leftBorderColor" [style.background]="textStyle.border.leftBorderColor"
-            cpOutputFormat="rgba" cpAlphaChannel="enabled" [cpPosition]="getCpPosition()" />
+            cpOutputFormat="rgba" cpAlphaChannel="enabled"/>
         </div>
 
         <div class="flex-row-between style-card-row">
