Build for test deployemnt

--- a/client/src/app/styler/styler.component.html
+++ b/client/src/app/styler/styler.component.html
@@ -354,8 +354,8 @@
           <fa name="strikethrough"></fa>
         </a>
 
-        <a (click)="textStyle.toggleStyleProperty('overline')" class="style-card-btn">
-          <h3 style="text-decoration:overline">O</h3>
+        <a (click)="textStyle.toggleStyleProperty('overline')" class="style-card-btn" >
+          <h4 style="text-decoration: overline; font-family: Arial">O</h4>
         </a>
       </div>
 
