--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -10,6 +10,12 @@ h1, h2, h3, h4, h5, h6, p {
     padding: 0;
 }
 
+input[type="number"]{
+    width: 40px;
+    text-align: right;
+}
+
+
 /*  Angular draggable/resizable handle */
 .ng-resizable-diagonal {
     display: none;
