--- a/client/src/app/styler/styler.component.html
+++ b/client/src/app/styler/styler.component.html
@@ -1,5 +1,5 @@
 <!-- SHAPE STYLE CARD -->
-<div class="style-cards-container" *ngIf="this.data.viewShapeElements && this.data.shapeStyles.length > 0">
+<!-- <div class="style-cards-container" *ngIf="this.data.viewShapeElements && this.data.shapeStyles.length > 0">
   <div class="style-card greenAccent01" *ngFor="let shapeStyle of this.data.shapeStyles.reverse()">
     <div class="flex-row-between style-card-row">
       <h3>{{shapeStyle.name}}
@@ -10,7 +10,7 @@
       </a>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- IMAGE STYLE CARD -->
 <div class="style-cards-container" *ngIf="this.data.viewImageElements && this.data.imageStyles.length > 0">
