--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -10,10 +10,10 @@
     <p>Create a new image style</p>
   </a>
 
-  <a (click)="this.data.createShapeStyle(); this.data.setMode('shape')" class="flex-col-evenly lg-btn">
+  <!-- <a (click)="this.data.createShapeStyle(); this.data.setMode('shape')" class="flex-col-evenly lg-btn">
     <fa name="shapes" size="4x"></fa>
     <p>Create a new shape style</p>
-  </a>
+  </a> -->
 </div>
 
 <div id="style-selector" class="greenAccent02">
