Fixed saved session functionality by adding revive functions to class objects

--- a/client/src/app/slide-editor/slide-editor.component.html
+++ b/client/src/app/slide-editor/slide-editor.component.html
@@ -4,7 +4,7 @@
     <p>Create a new slide</p>
   </a>
 
-  <a (click)="this.preview()" class="flex-row-evenly md-btn">
+  <a (click)="this.data.test()" class="flex-row-evenly md-btn">
     <fa name="play" size="3x"></fa>
     <p>Preview</p>
   </a>
