Fixed clipping of canvas when exporting to PDF

--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -37,7 +37,7 @@
 
 
 <div class="flex-row-evenly">
-  <a (click)="this.data.test()" class="flex-col-evenly lg-btn">
+  <a (click)="this.data.saveAsPng()" class="flex-col-evenly lg-btn">
     <fa name="file-image" size="4x"></fa>
     <p>Save As PNG</p>
   </a>
