--- a/client/src/app/slide-editor/slide-editor.component.html
+++ b/client/src/app/slide-editor/slide-editor.component.html
@@ -14,7 +14,7 @@
   </a>
 
   <div>
-    <h1>{{this.data.currentSlideIndex+1}}/{{this.data.slides.length}}</h1>
+    <h1 style="padding: 10px;" (click)="this.data.test()">{{this.data.currentSlideIndex+1}}/{{this.data.slides.length}}</h1>
   </div>
 
   <a (click)="this.nextSlide()" class="flex-row-evenly md-btn">
@@ -23,7 +23,7 @@
 
   <a (click)="this.deleteCurrentSlide()" class="flex-row-evenly md-btn">
     <fa name="trash" size="3x"></fa>
-    <p>Delete this slide</p>
+    <p>Delete slide</p>
   </a>
 </div>
 
@@ -32,8 +32,8 @@
     <div class="slide-render" [ngStyle]="this.getSlideRenderCss()">
       <!-- Render slide objects here -->
       <div *ngFor="let slideObject of this.data.slides[this.data.currentSlideIndex].slideObjects" class="slide-object" [ngStyle]="slideObject.getCss()"
-        (mousedown)="this.selectObject(slideObject.id)" ngResizable [rzHandles]="'n,e,s,w,se,sw,ne,nw'" (rzStop)="slideObject.setSize($event)"
-        ngDraggable (endOffset)="slideObject.setTranslation($event)" [position]="slideObject.getTranslation()" [rzAspectRatio]="slideObject.constructor.name==='ImageObject'">
+        (mousedown)="this.selectObject(slideObject.id)" ngResizable [rzHandles]="'all'" (rzStop)="slideObject.setSize($event)"
+        ngDraggable (endOffset)="slideObject.setTranslation($event)" [position]="slideObject.getTranslation()" [rzAspectRatio]="slideObject.constructor.name==='ImageObject'? true: false">
         <p *ngIf="slideObject.constructor.name==='TextObject'" [ngStyle]="this.data.getTextStyleById(slideObject.styleId).getCss()">{{slideObject.textValue}}</p>
         <img *ngIf="slideObject.constructor.name==='ImageObject'" [ngStyle]="this.data.getImageStyleById(slideObject.styleId).getCss()"
           [src]="slideObject.imagePath" crossOrigin="anonymous">
@@ -83,12 +83,12 @@
 
         <div *ngIf="!slideObject.editNameMode" class="sm-btn flex-row-evenly">
           <h5>{{slideObject.name}}</h5>
-          <fa name="edit" (click)="slideObject.toggleEditNameMode()"></fa>
+          <fa class="clickable" name="edit" (click)="slideObject.toggleEditNameMode()"></fa>
         </div>
 
         <div *ngIf="slideObject.editNameMode" class="sm-btn flex-row-evenly">
           <input type="text" [(ngModel)]="slideObject.name" (placeholder)="slideObject.name">
-          <fa name="save" (click)="slideObject.toggleEditNameMode()"></fa>
+          <fa class="clickable" name="save" (click)="slideObject.toggleEditNameMode()"></fa>
         </div>
 
       </div>
@@ -96,12 +96,12 @@
       <div *ngIf="slideObject.constructor.name==='TextObject'" class="flex-row-evenly">
         <div *ngIf="!slideObject.editTextMode" class="sm-btn flex-row-evenly">
           <h5>{{slideObject.textValue.substring(0, 15) + '...'}}</h5>
-          <fa name="edit" (click)="slideObject.toggleEditTextMode()"></fa>
+          <fa class="clickable" name="edit" (click)="slideObject.toggleEditTextMode()"></fa>
         </div>
 
         <div *ngIf="slideObject.editTextMode" class="sm-btn flex-row-evenly">
           <input type="text" [(ngModel)]="slideObject.textValue" (placeholder)="slideObject.textValue">
-          <fa name="save" (click)="slideObject.toggleEditTextMode()"></fa>
+          <fa class="clickable" name="save" (click)="slideObject.toggleEditTextMode()"></fa>
         </div>
       </div>
 
@@ -116,10 +116,10 @@
         <input type="number" [(ngModel)]="slideObject.yTranslation">
 
         <h5>H:</h5>
-        <input type="number" [(ngModel)]="slideObject.height">
+        <input type="number" #heightInput [ngModel]="slideObject.height" (change)="maintainRatio(slideObject, 'height', heightInput.value)">
 
         <h5>W:</h5>
-        <input type="number" [(ngModel)]="slideObject.width">
+        <input type="number" #widthInput [ngModel]="slideObject.width" (change)="maintainRatio(slideObject, 'width', widthInput.value)">
 
         <!-- <h5>R:</h5>
         <input type="number" [(ngModel)]="slideObject.rotation"> -->
